Trying to fix whitespace issue

--- a/css/global-styles.css
+++ b/css/global-styles.css
@@ -48,10 +48,15 @@ body{
     padding: 0;
 }
 
+html{
+    margin: 0;
+    padding: 0;
+}
+
 
 
 /* FONT STYLES: -------------------------- */
-/* h1, h2, h3, h4, h5, h6{
+h1, h2, h3, h4, h5, h6{
     font-family: brandon-grotesque, sans-serif;
     font-weight: 500;
     font-style: normal;
@@ -93,20 +98,20 @@ h6{
 
 P{
     font-size: 16px;
-} */
+}
 
 
 
 
 /* HEADER: ------------------------------- */
-/* .header-container{
+.header-container{
     text-align: center;
-} */
+}
 
 
 
 /* LINKS: -------------------------------- */
-/* .link{
+.link{
     color: #005288;
     text-decoration: none;
 }
@@ -134,12 +139,12 @@ P{
 
 .link__uppercase{
     text-transform: uppercase;
-} */
+}
 
 
 
 /* BUTTONS: ------------------------------ */
-/* .btn{
+.btn{
     text-align: center;
     padding: 20px;
     border-radius: 5px;
@@ -152,4 +157,4 @@ P{
 .btn:hover{
     background-color: transparent;
     color: #000;
-} */
+}
